improved trimming of topics coming from UI